rustdocs/errors/rust-bitcoin-bitcoin-examples-taproot-psbt-simple.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:26:5
   |
26 | use bitcoin::ext::*;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:25:5
   |
25 | use bitcoin::bip32::{ChildNumber, DerivationPath, Fingerprint, IntoDeriv...
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:27:5
   |
27 | use bitcoin::key::UntweakedPublicKey;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:28:5
   |
28 | use bitcoin::locktime::absolute;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:29:5
   |
29 | use bitcoin::psbt::Input;
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error[E0432]: unresolved import `bitcoin`
  --> ../rust-bitcoin/bitcoin/examples/taproot-psbt-simple.rs:30:5
   |
30 | use bitcoin::{
   |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
   |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
   |
23 + extern crate bitcoin;
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
